--- a/templates/tests_given.html
+++ b/templates/tests_given.html
@@ -30,7 +30,7 @@
 		<td>{{test['topic']}}</td> 
     	<td>{{test['marks']}}</td> 
     	<td>
-    		<a href="/{{session.username}}/{{test['test_id']}}">
+    		<a href="/{{session.user}}/{{test['test_id']}}">
     		<button class="btn btn-primary">Check Result</button>
     	</a>
     	</td>
