--- a/templates/give_test.html
+++ b/templates/give_test.html
@@ -17,7 +17,7 @@
     <div class="form-group">
       {{render_field(form.password, class="form-control")}}
     </div>
-    <p><input type="submit" class="btn btn-primary" value="Submit"></p>
+    <p><input type="submit" class="btn btn-primary" id="submit" value="Submit"></p>
   </form>
 </div>
 {% endblock %}
