--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -31,7 +31,8 @@
   <p id="que" style="">{{ q }}</p>
 </pre>
     </div>
-</div>
+
+
 
 <table id="options">
   <tr>
@@ -42,7 +43,9 @@
     <td id='c'>𝐂. {{ c }}</td>
     <td id='d'>𝐃. {{ d }}</td>
   </tr>
+  
 </table>
+
 
 <div id="overlay">
   <div class="container" id="question-list">
@@ -56,9 +59,10 @@
     <ul class="list-unstyled list-inline text-center py-2">
       <li class="list-inline-item">
         <button class="btn btn-primary btn-rounded" id="questions">Questions</button>
+        <button class="btn btn-primary btn-rounded" id="clr">Clear Input</button>
         <input type="button" value="Prev" id="prev" class="btn btn-primary btn-rounded">
         <input type="button" value="Next" id="next" class="btn btn-primary btn-rounded">
-        <input type="button" value="Submit" id="submit" class="btn btn-success btn-rounded">
+        <input type="button" value="Save and Next" id="submit" class="btn btn-success btn-rounded">
         <button class="btn btn-primary btn-rounded" id="bookmark">Bookmark</button>
         <div class="btn btn-success" id="finish">Finish Test</div>
       </li>
