--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,13 @@
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			  crossorigin="anonymous"></script>
     {% block head %}{% endblock %}
+    <style type="text/css">
+  @media print {
+    html, body {
+       display: none;  
+    }
+}
+</style>
   </head>
   <body>
     <div class="container">
