--- a/templates/default.html
+++ b/templates/default.html
@@ -45,7 +45,7 @@
 				<div class="footer-right">
 
 					<p class="footer-company-about">
-						<span>About the Project</span>
+						<span>Exam Site a better way to conduct online exams</span>
 					</p>
 
 				</div>
