--- a/templates/show_tests.html
+++ b/templates/show_tests.html
@@ -27,7 +27,7 @@
   
 
 
-    <{% for test in tests %}
+    {% for test in tests %}
                 <tr>
                     <td>{{test['subject']}}</td>
                     <td>{{test['topic']}}</td>
