--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div  >
-  
+  <div id = "alert_placeholder"></div>
 
 <div class="card border-primary mb-3" style="max-width: 20rem;fposition: relative;float: top;">
   <div class="card-header">Video Feed</div>
